tests/repl/errors/compile_errors.repl
#@ session: compile_errors
#@ description: Test compile-time error handling

# Undefined variable
>>> undefined_variable
#! undefined

# After errors, REPL still works
>>> 42
=> 42
